# LinearAlgebra

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Matrix3.cpp  Matrix3.hpp  Vector3.cpp  Vector3.hpp  main.cpp
math/: Matrix.hpp  Vector.hpp
